1. Add and anchor php files for both login and sign up html files. 2. Made corrections to the login form. 3. Made spacing corrections to css files. 4. Add SEO tag to login avatar. 5. Rename sign up file.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {font-family: Arial, Helvetica, sans-serif;
     background-color: #F68829;
-    padding: 20px, 50px, 20px, 50px;
+    padding: 20px 50px 20px 50px;
 }
 
 img {
